Fix broken links

--- a/TickTask-main/index.html
+++ b/TickTask-main/index.html
@@ -13,7 +13,7 @@
     <div class="navbarBootstrap">
       <nav class="navbar bg-light">
         <div class="container-fluid">
-          <a class="navbar-brand" href="/modules/login/login.html">
+          <a class="navbar-brand" href="./modules/login/login.html">
             <img
               src="./modules/img/todo-logo-cutout.png"
               alt="Logo"
@@ -22,11 +22,11 @@
               class="d-inline-block align-text-top"
             />TickTask
           </a>
-          <a href="/modules/profile/profile.html">
+          <a href="./modules/profile/profile.html">
             <div class="profile-nav">
-              <p id="profileName" class="text-primary">Utkarsh</p>
+              <p id="profileName" class="text-primary">Sunaina</p>
               <div class="profile-icon">
-                <p id="profileLetter" class="text-white">U</p>
+                <p id="profileLetter" class="text-white">S</p>
               </div>
             </div>
           </a>
@@ -38,17 +38,17 @@
         <h1>Manage your tasks with <span class="webName">TickTask</span></h1>
       </div>
       <div class="todoImg">
-        <img class="img" id="screenshot1" src="/modules/img/homepage2.PNG" alt="">
+        <img class="img" id="screenshot1" src="/TickTask-main/modules/img/homepage2-crop.png" alt="">
         <div class="imgBack"></div>
       </div>
     </div>
     <div class="textAbout">
       <img src="modules/img/task-management-bannerRc.png" alt="">
-      <p class="loginDec">Take your first Step <a href="/modules/login/login.html" id="loginBtn">Start</a></p>
+      <p class="loginDec">Take your first Step <a href="./modules/login/login.html" id="loginBtn">Start</a></p>
       <p class="textDec"><span>Organize and Conquer</span> Tame the chaos of everyday life with our powerful todo list app. Organize tasks by projects, deadlines, or categories, and conquer your day with confidence.</p>
     </div>
     <div class="footer">
-      <p>Created by <a href="https://github.com/utkarshofficial">Utkarsh Sharma</a></p>
+      <p>Created by <a href="https://github.com/Sunaina-Chaurasiya">Sunaina Chaurasiya</a></p>
     </div>
     <script src="./modules/navbar/navbar.js"></script>
     <script src="index.js"></script>
