--- a/TickTask-main/modules/login/login.html
+++ b/TickTask-main/modules/login/login.html
@@ -24,7 +24,7 @@
           </a>
           <a href="/modules/profile/profile.html">
             <div class="profile-nav">
-              <p id="profileName" class="text-primary">Utkarsh</p>
+              <p id="profileName" class="text-primary">Sunaina</p>
               <div class="profile-icon">
                 <p id="profileLetter" class="text-white">U</p>
               </div>
